a few more tweaks to replace travis stuff

--- a/hobbies.html
+++ b/hobbies.html
@@ -1,8 +1,9 @@
-<html>
+<!doctype html>
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8" />
-  <title>Travis Scholl</title>
+  <title>Lucas Van Meter</title>
   <link rel="stylesheet" href="style.css">
   <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -17,186 +18,21 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="//www.math.washington.edu/~tscholl2/125_summer_17/">Teaching</a>
-      <a href="cv/resume.pdf">Resume</a>
+      <a href="teaching.html">Teaching</a>
       <a href="projects.html">Projects</a>
       <a href="cv/cv.pdf">CV</a>
       <a href="hobbies.html">Hobbies</a>
-      <a href="notes.html">Notes</a>
+      <a href="outreach.html">Outreach</a>
     </nav>
   </header>
 
   <main>
-    <h1>Travis Scholl - Projects</h1>
-    <!--gardening-->
-    <section id="section-garden">
-      <h2>Gardening</h2>
-      <div>
-        <h4>4/25/15</h4>
-        <img src="projects/garden/4-25-15/garden.JPG">
-        <img src="projects/garden/4-25-15/radishes.JPG">
-        <img src="projects/garden/4-25-15/kale.JPG">
-        <img src="projects/garden/4-25-15/spinach.JPG">
-      </div>
-      <div>
-        <h4>5/2/15</h4>
-        <img src="projects/garden/5-2-15/garden.JPG">
-        <img src="projects/garden/5-2-15/radishes.JPG">
-        <img src="projects/garden/5-2-15/kale.JPG">
-        <img src="projects/garden/5-2-15/onions.JPG">
-        <img src="projects/garden/5-2-15/potatoes.JPG">
-        <img src="projects/garden/5-2-15/spinach.JPG">
-      </div>
-      <div>
-        <h4>5/10/15</h4>
-        <img src="projects/garden/5-10-15/garden.JPG">
-        <img src="projects/garden/5-10-15/radishes.JPG">
-        <img src="projects/garden/5-10-15/kale.JPG">
-        <img src="projects/garden/5-10-15/onions.JPG">
-        <img src="projects/garden/5-10-15/potatoes.JPG">
-        <img src="projects/garden/5-10-15/spinach.JPG">
-        <img src="projects/garden/5-10-15/carrots.JPG">
-      </div>
-      <div>
-        <h4>5/29/15</h4>
-        <img src="projects/garden/5-29-15/garden.JPG">
-        <img src="projects/garden/5-29-15/radishes.JPG">
-        <img src="projects/garden/5-29-15/kale.JPG">
-        <img src="projects/garden/5-29-15/onions.JPG">
-        <img src="projects/garden/5-29-15/potatoes.JPG">
-        <img src="projects/garden/5-29-15/spinach.JPG">
-        <img src="projects/garden/5-29-15/carrots.JPG">
-      </div>
-      <div>
-        <h4>6/18/15</h4>
-        <img src="projects/garden/6-18-15/garden.JPG">
-        <img src="projects/garden/6-18-15/cilantro.JPG">
-        <img src="projects/garden/6-18-15/kale.JPG">
-        <img src="projects/garden/6-18-15/onions.JPG">
-        <img src="projects/garden/6-18-15/potatoes.JPG">
-        <img src="projects/garden/6-18-15/zuchinni.JPG">
-      </div>
-      <div>
-        <h4>7/12/15</h4>
-        <img src="projects/garden/7-12-15/garden.JPG">
-        <img src="projects/garden/7-12-15/cilantro.JPG">
-        <img src="projects/garden/7-12-15/kale.JPG">
-        <img src="projects/garden/7-12-15/onions.JPG">
-        <img src="projects/garden/7-12-15/spinach.JPG">
-        <img src="projects/garden/7-12-15/zuchinni.JPG">
-      </div>
-      <div>
-        <h4>7/20/15</h4>
-        <img src="projects/garden/7-20-15/garden.JPG">
-        <img src="projects/garden/7-20-15/cilantro.JPG">
-        <img src="projects/garden/7-20-15/kale.JPG">
-        <img src="projects/garden/7-20-15/onions.JPG">
-        <img src="projects/garden/7-20-15/spinach.JPG">
-        <img src="projects/garden/7-20-15/zuchinni.JPG">
-      </div>
-      <div>
-        <h4>8/3/15</h4>
-        <img src="projects/garden/8-3-15/garden.JPG">
-        <img src="projects/garden/8-3-15/coriander.JPG">
-        <img src="projects/garden/8-3-15/kale.JPG">
-        <img src="projects/garden/8-3-15/onions.JPG">
-        <img src="projects/garden/8-3-15/spinach.JPG">
-        <img src="projects/garden/8-3-15/zuchinni.JPG">
-      </div>
-    </section>
-    <!--/gardening-->
-    <!--woodworking-->
-    <section id="section-woodworking">
-      <h2>Woodworking</h2>
-      <img src="projects/crafts/table.jpg">
-    </section>
-    <!--/woodworking-->
-    <!--metalworking-->
-    <section id="section-woodworking">
-      <h2>Metalworking</h2>
-      <img src="projects/metal/quad1.jpg">
-      <img src="projects/metal/quad2.jpg">
-      <img src="projects/metal/quad3.jpg">
-    </section>
-    <!--/metalworking-->
-    <!--art-->
-    <section id="section-art">
-      <h2>Art</h2>
-      <img src="projects/art/hamstr.svg">
-      <img src="projects/art/hamstr.2.svg">
-      <img src="projects/art/bunny.svg">
-      <img src="projects/art/envelope.jpg">
-      <img src="projects/art/crayons.JPG">
-      <img src="projects/art/dog.JPG">
-      <img src="projects/art/cat.JPG">
-      <img src="projects/art/bear.svg">
-      <img src="projects/art/chef-hops.svg">
-      <img src="projects/art/pig.svg">
-      <img src="projects/art/dog.svg">
-    </section>
-    <!--/art-->
-    <!--food-->
-    <section id="section-food">
-      <h2>Food</h2>
-      <img src="projects/food/bearcakes1.jpg">
-      <img src="projects/food/bearcakes2.jpg">
-      <img src="projects/food/bread.jpeg">
-      <img src="projects/food/pie.jpeg">
-      <img src="projects/food/pie2.jpg">
-      <img src="projects/food/pie3.JPG">
-      <img src="projects/food/applepie.JPG">
-      <img src="projects/food/keylimepie.JPG">
-      <img src="projects/food/keylimepie2.JPG">
-      <img src="projects/food/pecan_pie.JPG">
-      <img src="projects/food/yogurt_cheesecake.jpg">
-    </section>
-    <!--/food-->
-    <!--crafts-->
-    <section id="section-food">
-      <h2>Crafts</h2>
-      <img src="projects/crafts/chalkspeakers1.jpg">
-      <img src="projects/crafts/chalkspeakers2.jpg">
-      <img src="projects/crafts/sockshark2.jpeg">
-      <img src="projects/crafts/sockshark1.jpg">
-      <img src="projects/crafts/realdesk.jpg">
-      <img src="projects/crafts/virtualdesk.jpg">
-      <img src="projects/crafts/catgrass.JPG">
-      <img src="projects/crafts/minigrass.jpg">
-      <img src="projects/crafts/watercandle.jpg">
-      <img src="projects/crafts/tiedye.jpg">
-      <img src="projects/crafts/lemongrab.jpg">
-      <img src="projects/crafts/muffinman.jpg">
-    </section>
-    <!--crafts-->
-    <!--music-->
-    <section>
-      <h2>Music</h2>
-      <div>
-        Volcano
-        <audio controls>
-          <source src="projects/music/Volcano_NoVocals.mp3" type="audio/mpeg"> Your browser does not support the audio
-          element.
-        </audio>
-      </div>
-      <div>
-        Follow
-        <audio controls>
-          <source src="projects/music/Follow_Instrumental.mp3" type="audio/mpeg"> Your browser does not support the
-          audio element.
-        </audio>
-      </div>
-      <div>
-        Ukulele Test
-        <audio controls>
-          <source src="projects/music/ukulele_test.mp3" type="audio/mpeg"> Your browser does not support the audio
-          element.
-        </audio>
-      </div>
-    </section>
+    <h1>Hobbies</h1>
+    <p>under construction</p>
   </main>
 
   <footer>
-    <p>© 2017 Travis Scholl</p>
+    <p>© 2019 Lucas Van Meter</p>
   </footer>
 
 </body>
