--- a/index.html
+++ b/index.html
@@ -75,8 +75,9 @@
 
 
   <footer>
+  	<p>© 2019 Lucas Van Meter</p>
     <p>I would like to give credit to
-      <a href="https://tscholl2.github.io/website/index.html">Travis Scholl</a> for the design of this website.
+      <a href="https://tscholl2.github.io/website/index.html">Travis Scholl</a> for the design of this website.</p>
   </footer>
 
 </body>
