--- a/outreach.html
+++ b/outreach.html
@@ -28,7 +28,7 @@
 
   <main>
     <h1>Outreach</h1>
-    <p>ta da</p>
+    <p>under construction</p>
     <ul>
       <li>
         <a href="https://fepps.org/">FEPPS</a>
