--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,9 @@
-<html>
+<!doctype html>
+<html lang="en-US">
 
 <head>
   <meta charset="utf-8" />
-  <title>Travis Scholl</title>
+  <title>Lucas Van Meter</title>
   <link rel="stylesheet" href="style.css">
   <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -17,110 +18,21 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="//www.math.washington.edu/~tscholl2/125_summer_17/">Teaching</a>
-      <a href="cv/resume.pdf">Resume</a>
+      <a href="teaching.html">Teaching</a>
       <a href="projects.html">Projects</a>
       <a href="cv/cv.pdf">CV</a>
       <a href="hobbies.html">Hobbies</a>
-      <a href="notes.html">Notes</a>
+      <a href="outreach.html">Outreach</a>
     </nav>
   </header>
 
   <main>
-    <h1>Travis Scholl - Projects</h1>
-    <!--web apps-->
-    <section>
-      <h2>Web Apps</h2>
-      <h5>
-        <a class="button" href="https://tws.duckdns.org/hamweb">Hamstr</a>
-      </h5>
-      <p>
-        Hamstr is an online math homework system built for use at the University of Washington.
-      </p>
-      <h5>
-        <a class="button" href="https://github.com/tscholl2/cookbook">Cookbook</a>
-      </h5>
-      <p>
-        Cookbook is a self-hosted personal recipe collection.
-      </p>
-      <h5>
-        <a class="button" href="https://github.com/tscholl2/textytext">TextyText</a>
-      </h5>
-      <p>
-        TextyText is like snapchat for text messages. It is another implementation of
-        <a href="https://github.com/schollz/snaptext">snaptext</a>.
-      </p>
-    </section>
-    <!--/web apps-->
-    <!--programming-->
-    <section>
-      <h2>Programming</h2>
-      <h5>Educational Visualizations of Mathematical Concepts</h5>
-      <a class="button" href="https://tws.duckdns.org/prs/worksheet">Math Worksheet App</a>
-      <a class="button" href="projects/flot/calc.html">Riemann Sums</a>
-      <a class="button" href="projects/flot/trig.html">Trigometric Functions</a>
-      <a class="button" href="projects/flot/param.html">Parameterized Functions</a>
-      <h5>Other Math</h5>
-      <a class="button" href="projects/unitex">LaTeX to Unicode</a>
-      <a class="button" href="https://tws.duckdns.org/speoch">Math to Speech</a>
-      <a class="button" href="https://tws.duckdns.org/prs/inputs">sub-TeX Parser</a>
-      <a class="button" href="https://github.com/tscholl2/prime">CLI prime number generator</a>
-      <h5>AES Encryption Example</h5>
-      <a class="button" href="projects/crypt/crypt.html">Demo</a>
-      <a class="button" href="https://gist.github.com/tscholl2/dc7dc15dc132ea70a98e8542fefffa28">AES Gist</a>
-      <h5>Markdown Parser</h5>
-      <a class="button" href="https://gitlab.com/whatwhathuhhuh/bear-markdown">bear-markdown</a>
-      <h5>Random Recipe Generator</h5>
-      <a class="button" href="https://github.com/tscholl2/fudgen">Fudgen</a>
-      <h5>Random Number Beacon</h5>
-      <a class="button" href="https://github.com/tscholl2/beacon">beacon</a>
-      <h5>Animation</h5>
-      <a class="button" href="https://github.com/tscholl2/chef-hops">Chef Hops</a>
-      <h5>Docker Files</h5>
-      <a class="button" href="https://gist.github.com/tscholl2/5abebac13cc6db88d75b072d4b11ee82">Sage</a>
-      <a class="button" href="https://gist.github.com/tscholl2/a4e7d775107374422e71e43376d60cf5">TeX Studio</a>
-      <h5>Utilities</h5>
-      <a class="button" href="https://github.com/tscholl2/colorjson">Color JSON Printer</a>
-      <a class="button" href="hhttps://github.com/tscholl2/psp">PGP Certificate Customizer</a>
-      <a class="button" href="https://github.com/tscholl2/hamicon">User Icon Generator</a>
-    </section>
-    <!--/programming-->
-    <!--contributions-->
-    <section>
-      <h2>Contributions</h2>
-      <h5>
-        <a href="https://github.com/tscholl2/ant">Algebraic Number Theory</a>
-      </h5>
-      <p>
-        I am helping edit this book by
-        <a href="https://www.wstein.org/">William Stein</a>.
-      </p>
-      <h5>
-        <a href="http://iola.math.vt.edu/">IOLA</a>
-      </h5>
-      <p>
-        I worked as a consultant for this website and others in this project.
-      </p>
-      <h5>
-        <a href="https://cocalc.com">CoCalc</a> (formerly SageMathCloud)</h5>
-      <p>
-        I helped write the user presence/chat features as well as the color picker during
-        <a href="https://wiki.sagemath.org/days68">Sage Days 68</a>.
-      </p>
-      <h5>
-        <a href="https://www.sagemath.org">Sage</a>
-      </h5>
-      <p>
-        I have attended several Sage workshops contributed to Sage development. For example, I helped close this
-        <a href="https://trac.sagemath.org/ticket/3231">ticket</a> at
-        <a href="https://wiki.sagemath.org/days64.25">Sage Days 64.25</a>.
-      </p>
-    </section>
-    <!--/contributions-->
+    <h1>Hobbies</h1>
+    <p>under construction</p>
   </main>
 
   <footer>
-    <p>© 2017 Travis Scholl</p>
+    <p>© 2019 Lucas Van Meter</p>
   </footer>
 
 </body>
