--- a/teaching.html
+++ b/teaching.html
@@ -28,15 +28,7 @@
 
   <main>
     <h1>Outreach</h1>
-    <p>ta da</p>
-    <ul>
-      <li>
-        <a href="https://fepps.org/">FEPPS</a>
-      </li>
-      <li>
-        <a href="https://sites.math.washington.edu/~mathcircle/circle/">UW Math Circle</a>
-      </li>
-    </ul>
+    <p>under construction</p>
   </main>
 
   <footer>
