--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <section id="section-about">
       <h1>Lucas Van Meter</h1>
-      <img alt="picture of Lucas Van Meter" src="img/lucas.jpg">
+      <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:25%;object-fit: cover;">
       <p>
         I am a visiting instructor at Lewis & Clark College in the math department. Something about me. My interests include:
       </p>
