--- a/teaching.html
+++ b/teaching.html
@@ -28,7 +28,15 @@
 
   <main>
     <h1>Teaching</h1>
-    <p>under construction</p>
+    <p>I am currently teaching:</p>
+    <ul>
+      <li>
+        <a href="classes/MATH131/index.html">MATH 131, Calculus I</a>
+      </li>
+      <li>
+        <a href="classes/MATH132/index.html">MATH 132, Calculus II</a>
+      </li>
+    </ul>
   </main>
 
   <footer>
