--- a/cv.html
+++ b/cv.html
@@ -27,33 +27,8 @@
   </header>
 
   <main>
-    <h1>Hobbies</h1>
-    <p>under construction</p>
-
-    <section id="reading">
-      <h1>Reading</h1>
-      <ul>
-        <li>
-          <a href="https://www.goodreads.com/user/show/52162666-lucas">Good Reads</a>
-        </li>
-      </ul>
-    </section>
-
-    <section id="games">
-      <h1>Games</h1>
-      <ul>
-        <li>
-          <a href="">Dots and Boxes</a>
-        </li>
-        <li>
-          <a href="">Hanabi</a>
-        </li>
-        <li>
-          <a href="">Projective SET</a>
-        </li>
-      </ul>
-    </section>
-
+    <h1>CV</h1>
+    <a href="cv/cv.pdf">Click here for my CV.</a>
   </main>
 
   <footer>
