--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="keywords" content="math">
   <title>Lucas Van Meter - Personal Webpage</title>
   <link rel="stylesheet" href="style.css">
   <!-- Google Fonts -->
@@ -20,7 +19,7 @@
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
       <a href="projects.html">Projects</a>
-      <a href="cv/cv.pdf">CV</a>
+      <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
     </nav>
@@ -30,12 +29,13 @@
 
     <section id="section-about">
       <h1>Lucas Van Meter</h1>
-      <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:25%;object-fit: cover;">
+      <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:30%;object-fit: cover;float:right;">
       <p>
-        I am a visiting instructor at Lewis & Clark College in the math department. Something about me. My interests include:
+        I am a visiting instructor at Lewis & Clark College in the math department. My interests include:
       </p>
       <ul>
         <li>Algebraic Geometry</li>
+        <li>Teaching and Learning</li>
         <li>Computer Vision</li>
       </ul>
     </section>
