--- a/outreach.html
+++ b/outreach.html
@@ -20,7 +20,7 @@
       <a href="index.html">Home</a>
       <a href="teaching.html">Teaching</a>
       <a href="projects.html">Projects</a>
-      <a href="cv/cv.pdf">CV</a>
+      <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
       <a href="outreach.html">Outreach</a>
     </nav>
