--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -38,7 +38,7 @@
   				<p>Howard 132<br>MTThF 12:50-1:40<br>
 
   			<h4>Office Hours</h4>
-  				<p>BoDine 304<br>Mon and Fri 9:30-11:00am,<br>Tues and Thur 1:00-2:00pm,<br> Or by appointment</p>				
+  				<p>BoDine 304<br>Mon and Fri 9:30-11:00am,<br>Tues and Thur 2:00-3:00pm,<br> Or by appointment</p>				
 		</div>
 
 		<div id="col2">
@@ -89,7 +89,7 @@
 						<td> 2 </td>
 						<td> 9 Sept. </td>
 						<td> 1.3: Computation of Limits </td>
-						<td> <a href="./hw/hw2/hw2.pdf">HW 2</a> </td>
+						<td> <a href="./hw/hw2.pdf">HW 2</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -103,7 +103,7 @@
 						<td> </td>
 						<td> 12 Sept. </td>
 						<td> 1.4: Continuity </td>
-						<td> <a href="./hw/hw3/hw3.pdf">HW 3</a> </td>
+						<td> <a href="./hw/hw3.pdf">HW 3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -117,7 +117,7 @@
 						<td> 3 </td>
 						<td> 16 Sept. </td>
 						<td> 1.5: Limits Involving Infinity </td>
-						<td> <a href="./hw/hw4/hw4.pdf">HW 4</a> </td>
+						<td> <a href="./hw/hw4.pdf">HW 4</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -131,7 +131,7 @@
 						<td>  </td>
 						<td> 19 Sept. </td>
 						<td> 2.1: Tangent Lines, Velocity  </td>
-						<td> <a href="./hw/hw5/hw5.pdf">HW 5</a> </td>
+						<td> <a href="./hw/hw5.pdf">HW 5</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -145,7 +145,7 @@
 						<td> 4 </td>
 						<td> 23 Sept. </td>
 						<td> 2.2: The Derivative </td>
-						<td> <a href="./hw/hw6/hw6.pdf">HW 6</a> </td>
+						<td> <a href="./hw/hw6.pdf">HW 6</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -159,7 +159,7 @@
 						<td>  </td>
 						<td> 26 Sept. </td>
 						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td> <a href="./hw/hw7/hw7.pdf">HW 7</a> </td>
+						<td> <a href="./hw/hw7.pdf">HW 7</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -173,7 +173,7 @@
 						<td> 5 </td>
 						<td> 30 Sept. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td> <a href="./hw/hw8/hw8.pdf">HW 8</a> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -187,7 +187,7 @@
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 2.5: The Chain Rule </td>
-						<td> <a href="./hw/hw9/hw9.pdf">HW 9</a> </td>
+						<td> <a href="./hw/hw9.pdf">HW 9</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -201,7 +201,7 @@
 						<td> 6 </td>
 						<td> 7 Oct. </td>
 						<td> Review </td>
-						<td> <a href="./hw/hw10/hw10.pdf">HW 10</a> </td>
+						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -243,7 +243,7 @@
 						<td>  </td>
 						<td> 17 Oct. </td>
 						<td> 2.7: Der. of Expo and Log Functions </td>
-						<td> <a href="./hw/hw11/hw11.pdf">HW 11</a> </td>
+						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -257,7 +257,7 @@
 						<td> 8 </td>
 						<td> 21 Oct. </td>
 						<td>  2.8: Implicit Differentiation, Inverse Trig </td>
-						<td> <a href="./hw/hw12/hw12.pdf">HW 12</a> </td>
+						<td> <a href="./hw/hw12.pdf">HW 12</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -271,7 +271,7 @@
 						<td> </td>
 						<td> 24 Oct. </td>
 						<td> 2.10: Mean Value Theorem  </td>
-						<td> <a href="./hw/hw13/hw13.pdf">HW 13</a> </td>
+						<td> <a href="./hw/hw13.pdf">HW 13</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -285,7 +285,7 @@
 						<td> 9 </td>
 						<td> 28 Oct. </td>
 						<td> 3.1: Linear Approximation, Newton’s Method </td>
-						<td> <a href="./hw/hw14/hw14.pdf">HW 14</a> </td>
+						<td> <a href="./hw/hw14.pdf">HW 14</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -299,7 +299,7 @@
 						<td> </td>
 						<td> 31 Oct. </td>
 						<td> 3.2: L’Hopital’s Rule </td>
-						<td> <a href="./hw/hw15/hw12.pdf">HW 15</a> </td>
+						<td> <a href="./hw/hw12.pdf">HW 15</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -313,7 +313,7 @@
 						<td> 10 </td>
 						<td> 4 Nov. </td>
 						<td> 3.3: Maximum & Minimum </td>
-						<td> <a href="./hw/hw16/hw16.pdf">HW 16</a> </td>
+						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -327,7 +327,7 @@
 						<td> </td>
 						<td> 7 Nov. </td>
 						<td> 3.5: Concavity </td>
-						<td> <a href="./hw/hw17/hw17.pdf">HW 17</a> </td>
+						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -341,7 +341,7 @@
 						<td> 11 </td>
 						<td> 11 Nov. </td>
 						<td> 3.7: Optimization </td>
-						<td> <a href="./hw/hw18/hw18.pdf">HW 18</a> </td>
+						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -355,7 +355,7 @@
 						<td> </td>
 						<td> 14 Nov. </td>
 						<td> 3.8: Related Rates </td>
-						<td> <a href="./hw/hw19/hw19.pdf">HW 19</a> </td>
+						<td> <a href="./hw/hw19.pdf">HW 19</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -397,7 +397,7 @@
 						<td> 13 </td>
 						<td> 25 Nov. </td>
 						<td> 4.3: Area </td>
-						<td> <a href="./hw/hw20/hw20.pdf">HW 20</a> </td>
+						<td> <a href="./hw/hw20.pdf">HW 20</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -425,7 +425,7 @@
 						<td> 14 </td>
 						<td> 2 Dec. </td>
 						<td> 4.4 The Definite Integral </td>
-						<td> <a href="./hw/hw21/hw21.pdf">HW 21</a> </td>
+						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -439,7 +439,7 @@
 						<td> </td>
 						<td> 5 Dec. </td>
 						<td> 4.5: The Fundamental Theorem of Calculus </td>
-						<td> <a href="./hw/hw22/hw22.pdf">HW 22</a> </td>
+						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -453,7 +453,7 @@
 						<td> 15 </td>
 						<td> 9 Dec. </td>
 						<td> 4.6: The Substitution Method </td>
-						<td> <a href="./hw/hw23/hw23.pdf">HW 23</a> </td>
+						<td> <a href="./hw/hw23.pdf">HW 23</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
