--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -37,7 +37,7 @@
   				<p>Lucas Van Meter<br>lvanmeter@lclark.edu</p>
 
   			<h4>Office Hours</h4>
-  				<p>BoDine 304<br>Mon and Fri 9:30-11:00am,<br>Tues and Thur 1:00-2:00pm,<br> Or by appointment</p>		
+  				<p>BoDine 304<br>Mon and Fri 9:30-11:00am,<br>Tues and Thur 2:00-3:00pm,<br> Or by appointment</p>		
 		</div>
 
 		<div id="col2">
@@ -88,7 +88,7 @@
 						<td> 2 </td>
 						<td> 9 Sept. </td>
 						<td> 4.5: Fundamental Theorem of Calculus </td>
-						<td> HW 2 </td>
+						<td> <a href="./hw/hw2.pdf">HW 2</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -102,7 +102,7 @@
 						<td> </td>
 						<td> 12 Sept. </td>
 						<td> 4.6: Integration by Substitution </td>
-						<td> HW 2</td>
+						<td> <a href="./hw/hw3.pdf">HW 3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -116,7 +116,7 @@
 						<td> 3 </td>
 						<td> 16 Sept. </td>
 						<td> 5.1: Area </td>
-						<td> </td>
+						<td> <a href="./hw/hw4.pdf">HW 4</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -130,7 +130,7 @@
 						<td>  </td>
 						<td> 19 Sept. </td>
 						<td> 5.2: Volume </td>
-						<td>  </td>
+						<td> <a href="./hw/hw5.pdf">HW 5</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -144,7 +144,7 @@
 						<td> 4 </td>
 						<td> 23 Sept. </td>
 						<td> 5.3: More Volume </td>
-						<td> HW 6 </td>
+						<td> <a href="./hw/hw6.pdf">HW 6</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -158,7 +158,7 @@
 						<td>  </td>
 						<td> 26 Sept. </td>
 						<td> 5.4: Arc Length and Surface Area </td>
-						<td> HW 7 </td>
+						<td> <a href="./hw/hw7.pdf">HW 7</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -172,7 +172,7 @@
 						<td> 5 </td>
 						<td> 30 Sept. </td>
 						<td> Midterm I </td>
-						<td> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -186,7 +186,7 @@
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 5.5: Projectile Motion </td>
-						<td> HW 8 </td>
+						<td> <a href="./hw/hw9.pdf">HW 9</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -200,7 +200,7 @@
 						<td> 6 </td>
 						<td> 7 Oct. </td>
 						<td> 5.6: Application in Physics </td>
-						<td>  </td>
+						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -228,7 +228,7 @@
 						<td> 7 </td>
 						<td> 14 Oct. </td>
 						<td> 7.1: Differential Equations </td>
-						<td>  </td>
+						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -242,7 +242,7 @@
 						<td>  </td>
 						<td> 17 Oct. </td>
 						<td> 6.1: Review of Basic Integration Techniques </td>
-						<td>  </td>
+						<td> <a href="./hw/hw12.pdf">HW 12</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -256,7 +256,7 @@
 						<td> 8 </td>
 						<td> 21 Oct. </td>
 						<td> 6.2: Integration by Parts </td>
-						<td> HW 10 </td>
+						<td> <a href="./hw/hw13.pdf">HW 13</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -270,7 +270,7 @@
 						<td> </td>
 						<td> 24 Oct. </td>
 						<td>  6.3: Trig Integrals  </td>
-						<td> HW 12 </td>
+						<td> <a href="./hw/hw14.pdf">HW 14</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -284,7 +284,7 @@
 						<td> 9 </td>
 						<td> 28 Oct. </td>
 						<td> 6.4: Partial Fractions </td>
-						<td>  </td>
+						<td> <a href="./hw/hw15.pdf">HW 15</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -298,7 +298,7 @@
 						<td> </td>
 						<td> 31 Oct. </td>
 						<td> 4.7: Numerical Integration </td>
-						<td>  </td>
+						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -340,7 +340,7 @@
 						<td> 11 </td>
 						<td> 11 Nov. </td>
 						<td> 8.1: Sequences </td>
-						<td>  </td>
+						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -354,7 +354,7 @@
 						<td> </td>
 						<td> 14 Nov. </td>
 						<td> 8.3: The Integral and Comparison Tests </td>
-						<td>  </td>
+						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -368,7 +368,7 @@
 						<td> 12 </td>
 						<td> 18 Nov. </td>
 						<td> 8.4: Alternating Series </td>
-						<td> </td>
+						<td> <a href="./hw/hw19.pdf">HW 19</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -382,7 +382,7 @@
 						<td> </td>
 						<td> 21 Nov. </td>
 						<td> 8.5: Absolute Convergence and Ratio Test </td>
-						<td>  </td>
+						<td> <a href="./hw/hw20.pdf">HW 20</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -396,7 +396,7 @@
 						<td> 13 </td>
 						<td> 25 Nov. </td>
 						<td> 8.6: Power Series </td>
-						<td>  </td>
+						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -424,7 +424,7 @@
 						<td> 14 </td>
 						<td> 2 Dec. </td>
 						<td> 8.7: Taylor Series </td>
-						<td>  </td>
+						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -438,7 +438,7 @@
 						<td> </td>
 						<td> 5 Dec. </td>
 						<td> 8.8: Applications of Taylor Series </td>
-						<td>  </td>
+						<td> <a href="./hw/hw23.pdf">HW 23</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -452,7 +452,7 @@
 						<td> 15 </td>
 						<td> 9 Dec. </td>
 						<td> 8.9: Fourier Series </td>
-						<td>  </td>
+						<td> <a href="./hw/hw24.pdf">HW 24</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
