added homework links and link to moodle

--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -30,6 +30,7 @@
 			<h3>Links</h3>
   			<ul>
   				<li> <a href="./syllabus/syllabus_fall2019_math131.pdf">Syllabus</a></p>
+  				<li> <a href="https://moodle.lclark.edu/">Moodle</a></p>
   				<li> <a href="https://college.lclark.edu/departments/mathematical_sciences/sqrc/">SQRC</a></p>
   			</ul>
 
