--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -30,7 +30,9 @@
 			<h3>Links</h3>
   			<ul>
   				<li> <a href="./syllabus/syllabus.pdf">Syllabus</a></p>
+  				<li> <a href="https://moodle.lclark.edu/">Moodle</a></p>
   				<li> <a href="https://college.lclark.edu/departments/mathematical_sciences/sqrc/">SQRC</a></p>
+  					
   			</ul>
 
  			<h4>Class Info</h4>
@@ -172,7 +174,7 @@
 						<td> 5 </td>
 						<td> 30 Sept. </td>
 						<td> Midterm I </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -186,7 +188,7 @@
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 5.5: Projectile Motion </td>
-						<td> <a href="./hw/hw9.pdf">HW 9</a> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -200,7 +202,7 @@
 						<td> 6 </td>
 						<td> 7 Oct. </td>
 						<td> 5.6: Application in Physics </td>
-						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
+						<td> <a href="./hw/hw9.pdf">HW 9</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -228,7 +230,7 @@
 						<td> 7 </td>
 						<td> 14 Oct. </td>
 						<td> 7.1: Differential Equations </td>
-						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
+						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -242,7 +244,7 @@
 						<td>  </td>
 						<td> 17 Oct. </td>
 						<td> 6.1: Review of Basic Integration Techniques </td>
-						<td> <a href="./hw/hw12.pdf">HW 12</a> </td>
+						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -256,7 +258,7 @@
 						<td> 8 </td>
 						<td> 21 Oct. </td>
 						<td> 6.2: Integration by Parts </td>
-						<td> <a href="./hw/hw13.pdf">HW 13</a> </td>
+						<td> <a href="./hw/hw12.pdf">HW 12</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -270,7 +272,7 @@
 						<td> </td>
 						<td> 24 Oct. </td>
 						<td>  6.3: Trig Integrals  </td>
-						<td> <a href="./hw/hw14.pdf">HW 14</a> </td>
+						<td> <a href="./hw/hw13.pdf">HW 13</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -284,7 +286,7 @@
 						<td> 9 </td>
 						<td> 28 Oct. </td>
 						<td> 6.4: Partial Fractions </td>
-						<td> <a href="./hw/hw15.pdf">HW 15</a> </td>
+						<td> <a href="./hw/hw14.pdf">HW 14</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -298,7 +300,7 @@
 						<td> </td>
 						<td> 31 Oct. </td>
 						<td> 4.7: Numerical Integration </td>
-						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
+						<td> <a href="./hw/hw15.pdf">HW 15</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -340,7 +342,7 @@
 						<td> 11 </td>
 						<td> 11 Nov. </td>
 						<td> 8.1: Sequences </td>
-						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
+						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -354,7 +356,7 @@
 						<td> </td>
 						<td> 14 Nov. </td>
 						<td> 8.3: The Integral and Comparison Tests </td>
-						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
+						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -368,7 +370,7 @@
 						<td> 12 </td>
 						<td> 18 Nov. </td>
 						<td> 8.4: Alternating Series </td>
-						<td> <a href="./hw/hw19.pdf">HW 19</a> </td>
+						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -382,7 +384,7 @@
 						<td> </td>
 						<td> 21 Nov. </td>
 						<td> 8.5: Absolute Convergence and Ratio Test </td>
-						<td> <a href="./hw/hw20.pdf">HW 20</a> </td>
+						<td> <a href="./hw/hw19.pdf">HW 19</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -396,7 +398,7 @@
 						<td> 13 </td>
 						<td> 25 Nov. </td>
 						<td> 8.6: Power Series </td>
-						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
+						<td> <a href="./hw/hw20.pdf">HW 20</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -424,7 +426,7 @@
 						<td> 14 </td>
 						<td> 2 Dec. </td>
 						<td> 8.7: Taylor Series </td>
-						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
+						<td> <a href="./hw/hw21.pdf">HW 21</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -438,7 +440,7 @@
 						<td> </td>
 						<td> 5 Dec. </td>
 						<td> 8.8: Applications of Taylor Series </td>
-						<td> <a href="./hw/hw23.pdf">HW 23</a> </td>
+						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -452,7 +454,7 @@
 						<td> 15 </td>
 						<td> 9 Dec. </td>
 						<td> 8.9: Fourier Series </td>
-						<td> <a href="./hw/hw24.pdf">HW 24</a> </td>
+						<td> <a href="./hw/hw23.pdf">HW 23</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
