--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -83,7 +83,7 @@
 						<td> </td>
 						<td> 6 Sept. </td>
 						<td> 4.4: The Definite Integral </td>
-						<td> </td>
+						<td> <a href="./pcq/pcq4.4.pdf">, Pre-Class Q: 4.4 </a></td>
 						<td> </td>
 					</tr>
 					<tr>
