--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -110,7 +110,7 @@
 					<tr>
 						<td>  </td>
 						<td> 13 Sept. </td>
-						<td> 4.8: The Natural Log as an Integral   </td>
+						<td> 4.6: Integration by Substitution </td>
 						<td> </td>
 						<td> </td>
 					</tr>
