--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -84,7 +84,7 @@
 						<td> 6 Sept. </td>
 						<td> 4.4: The Definite Integral </td>
 						<td> <a href="./pcq/pcq4.4.pdf"> Pre-Class Q: 4.4 </a></td>
-						<td> </td>
+						<td> <a href="./worksheets/wk4.4.pdf"> Worksheet 4.4 </a> </td>
 					</tr>
 					<tr>
 						<td> 2 </td>
@@ -98,13 +98,13 @@
 						<td> 10 Sept. </td>
 						<td> 4.5: Fundamental Theorem of Calculus </a> </td>
 						<td> </td>
-						<td>  </td>
+						<td> Practice Quiz </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 12 Sept. </td>
 						<td> 4.6: Integration by Substitution </td>
-						<td> <a href="./hw/hw3.pdf">HW 3</a> </td>
+						<td> <a href="./hw/hw3.pdf">HW 3</a>, <a href="./pcq/pcq4.6.pdf"> Pre-Class Q: 4.6 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
