--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -84,7 +84,7 @@
 						<td> 6 Sept. </td>
 						<td> 1.2: Intro to Limits </td>
 						<td> <a href="./pcq/pcq1.2.pdf"> Pre-Class Q: 1.2 </a> </td>
-						<td> </td>
+						<td> <a href="./worksheets/wk1.2.pdf"> Worksheet 1.2 </a> </td>
 					</tr>
 					<tr>
 						<td> 2 </td>
@@ -98,13 +98,13 @@
 						<td> 10 Sept. </td>
 						<td> 1.3: Computation of Limits </a> </td>
 						<td> </td>
-						<td>  </td>
+						<td> Practice Quiz </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 12 Sept. </td>
 						<td> 1.4: Continuity </td>
-						<td> <a href="./hw/hw3.pdf">HW 3</a> </td>
+						<td> <a href="./hw/hw3.pdf">HW 3</a>, <a href="./pcq/pcq1.4.pdf"> Pre-Class Q: 1.4 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
