--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -91,21 +91,21 @@
 						<td> 9 Sept. </td>
 						<td> 4.5: Fundamental Theorem of Calculus </td>
 						<td> <a href="./hw/hw2.pdf">HW 2</a>, <a href="./pcq/pcq4.5.pdf"> Pre-Class Q: 4.5 </a></td>
-						<td> </td>
+						<td> <a href="./worksheets/wk4.5.pdf"> Worksheet 4.5 </a>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 10 Sept. </td>
 						<td> 4.5: Fundamental Theorem of Calculus </a> </td>
 						<td> </td>
-						<td> Practice Quiz </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 12 Sept. </td>
 						<td> 4.6: Integration by Substitution </td>
 						<td> <a href="./hw/hw3.pdf">HW 3</a>, <a href="./pcq/pcq4.6.pdf"> Pre-Class Q: 4.6 </a> </td>
-						<td> </td>
+						<td> Practice Quiz </td>
 					</tr>
 					<tr>
 						<td>  </td>
