--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -96,16 +96,16 @@
 					<tr>
 						<td>  </td>
 						<td> 10 Sept. </td>
-						<td> 1.3: Computation of Limits </a> </td>
-						<td> </td>
-						<td> Practice Quiz </td>
+						<td> 1.4: Continuity </a> </td>
+						<td> <a href="./pcq/pcq1.4.pdf"> Pre-Class Q: 1.4 </a> </td>
+						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 12 Sept. </td>
 						<td> 1.4: Continuity </td>
-						<td> <a href="./hw/hw3.pdf">HW 3</a>, <a href="./pcq/pcq1.4.pdf"> Pre-Class Q: 1.4 </a> </td>
-						<td> </td>
+						<td> <a href="./hw/hw3.pdf">HW 3</a> </td>
+						<td> Practice Quiz </td>
 					</tr>
 					<tr>
 						<td>  </td>
