--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -126,7 +126,7 @@
 						<td> 17 Sept. </td>
 						<td> 1.5: Limits Involving Infinity </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 1 </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -154,7 +154,7 @@
 						<td> 24 Sept. </td>
 						<td> 2.2: The Derivative  </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 2 </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -181,7 +181,7 @@
 						<td>  </td>
 						<td> 1 Oct. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td>  </td>
+						<td> Quiz 3 </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -266,7 +266,7 @@
 						<td> 22 Oct. </td>
 						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 4 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -293,7 +293,7 @@
 						<td>  </td>
 						<td> 29 Oct. </td>
 						<td> 3.1: Linear Approximation, Newton’s Method </td>
-						<td>  </td>
+						<td> Quiz 5 </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -322,7 +322,7 @@
 						<td> 5 Nov. </td>
 						<td> 3.4: Increasing & Decreasing </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 6 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -350,7 +350,7 @@
 						<td> 12 Nov. </td>
 						<td> 3.7: Optimization </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 7 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -406,7 +406,7 @@
 						<td> 26 Nov. </td>
 						<td> 4.4 The Definite Integral </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 9 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -462,7 +462,7 @@
 						<td> 10 Dec. </td>
 						<td> 4.6: The Substitution Method </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 10 </td>
 					</tr>
 				</table>
 			</section>
