--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -91,7 +91,7 @@
 						<td> 9 Sept. </td>
 						<td> 4.5: Fundamental Theorem of Calculus </td>
 						<td> <a href="./hw/hw2.pdf">HW 2</a>, <a href="./pcq/pcq4.5.pdf"> Pre-Class Q: 4.5 </a></td>
-						<td> <a href="./worksheets/wk4.5.pdf"> Worksheet 4.5 </a>  </td>
+						<td> <a href="./worksheets/wk4.5.pdf"> Worksheet 4.5 </a>, <a href="./worksheets/wk4.5sol.pdf"> Worksheet 4.5 Solutions</a>   </td>
 					</tr>
 					<tr>
 						<td>  </td>
