--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -118,7 +118,7 @@
 						<td> 3 </td>
 						<td> 16 Sept. </td>
 						<td> 1.5: Limits Involving Infinity </td>
-						<td> <a href="./hw/hw4.pdf">HW 4</a> </td>
+						<td> <a href="./hw/hw4.pdf">HW 4</a>, <a href="./pcq/pcq1.5.pdf"> PCQ: 1.5 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -132,7 +132,7 @@
 						<td>  </td>
 						<td> 19 Sept. </td>
 						<td> 2.1: Tangent Lines, Velocity  </td>
-						<td> <a href="./hw/hw5.pdf">HW 5</a> </td>
+						<td> <a href="./hw/hw5.pdf">HW 5</a>, <a href="./pcq/pcq2.1.pdf"> PCQ: 2.1 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -146,7 +146,7 @@
 						<td> 4 </td>
 						<td> 23 Sept. </td>
 						<td> 2.2: The Derivative </td>
-						<td> <a href="./hw/hw6.pdf">HW 6</a> </td>
+						<td> <a href="./hw/hw6.pdf">HW 6</a>, <a href="./pcq/pcq2.2.pdf"> PCQ: 2.2 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -160,7 +160,7 @@
 						<td>  </td>
 						<td> 26 Sept. </td>
 						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td> <a href="./hw/hw7.pdf">HW 7</a> </td>
+						<td> <a href="./hw/hw7.pdf">HW 7</a>, <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -174,21 +174,21 @@
 						<td> 5 </td>
 						<td> 30 Sept. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 1 Oct. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td> Quiz 3 </td>
 						<td>  </td>
+						<td> Quiz 3 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 2.5: The Chain Rule </td>
-						<td> <a href="./hw/hw9.pdf">HW 9</a> </td>
+						<td> <a href="./hw/hw9.pdf">HW 9</a>, <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -293,8 +293,8 @@
 						<td>  </td>
 						<td> 29 Oct. </td>
 						<td> 3.1: Linear Approximation, Newton’s Method </td>
+						<td> </td>
 						<td> Quiz 5 </td>
-						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
