--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -110,43 +110,43 @@
 					<tr>
 						<td>  </td>
 						<td> 13 Sept. </td>
-						<td> 1.4: Continuity </td>
-						<td> </td>
+						<td> 1.5: Limits Involving Infinity </td>
+						<td> <a href="./pcq/pcq1.5.pdf"> PCQ: 1.5 </a></td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
 						<td> 16 Sept. </td>
 						<td> 1.5: Limits Involving Infinity </td>
-						<td> <a href="./hw/hw4.pdf">HW 4</a>, <a href="./pcq/pcq1.5.pdf"> PCQ: 1.5 </a> </td>
+						<td> <a href="./hw/hw4.pdf">HW 4</a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 17 Sept. </td>
-						<td> 1.5: Limits Involving Infinity </td>
-						<td> </td>
+						<td> 2.1: Tangent Lines, Velocity  </td>
+						<td> <a href="./pcq/pcq2.1.pdf"> PCQ: 2.1 </a> </td>
 						<td> Quiz 1 </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 19 Sept. </td>
 						<td> 2.1: Tangent Lines, Velocity  </td>
-						<td> <a href="./hw/hw5.pdf">HW 5</a>, <a href="./pcq/pcq2.1.pdf"> PCQ: 2.1 </a> </td>
+						<td> <a href="./hw/hw5.pdf">HW 5</a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 20 Sept. </td>
-						<td> 2.1: Tangent Lines, Velocity  </td>
-						<td>  </td>
+						<td> 2.2: The Derivative </td>
+						<td> <a href="./pcq/pcq2.2.pdf"> PCQ: 2.2 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 4 </td>
 						<td> 23 Sept. </td>
 						<td> 2.2: The Derivative </td>
-						<td> <a href="./hw/hw6.pdf">HW 6</a>, <a href="./pcq/pcq2.2.pdf"> PCQ: 2.2 </a> </td>
+						<td> <a href="./hw/hw6.pdf">HW 6</a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
