--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -126,7 +126,7 @@
 						<td> 17 Sept. </td>
 						<td> 5.1: Area </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 1 </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -154,7 +154,7 @@
 						<td> 24 Sept. </td>
 						<td> 5.4: Arc Length and Surface Area  </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 2 </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -175,7 +175,7 @@
 						<td> 30 Sept. </td>
 						<td> Midterm I </td>
 						<td>  </td>
-						<td>  </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -210,7 +210,7 @@
 						<td> 8 Oct. </td>
 						<td> 5.7: Application in Probability </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 3 </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -238,7 +238,7 @@
 						<td> 15 Oct. </td>
 						<td> 6.1: Review of Basic Integration Techniques </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 4 </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -266,7 +266,7 @@
 						<td> 22 Oct. </td>
 						<td> 6.3: Trig Integrals </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 5 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -294,7 +294,7 @@
 						<td> 29 Oct. </td>
 						<td> 6.5: Computer Algebra Systems </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 6 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -350,7 +350,7 @@
 						<td> 12 Nov. </td>
 						<td> 8.2: Series </td>
 						<td> </td>
-						<td>  </td>
+						<td> Quiz 7 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -378,7 +378,7 @@
 						<td> 19 Nov. </td>
 						<td> 8.4: Alternating Series </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 8 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -406,7 +406,7 @@
 						<td> 26 Nov. </td>
 						<td> 8.6: Power Series </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 9 </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -441,7 +441,7 @@
 						<td> 5 Dec. </td>
 						<td> 8.8: Applications of Taylor Series </td>
 						<td> <a href="./hw/hw22.pdf">HW 22</a> </td>
-						<td>  </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
@@ -462,7 +462,7 @@
 						<td> 10 Dec. </td>
 						<td> Review </td>
 						<td>  </td>
-						<td>  </td>
+						<td> Quiz 10 </td>
 					</tr>
 				</table>
 			</section>
