--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -118,7 +118,7 @@
 						<td> 3 </td>
 						<td> 16 Sept. </td>
 						<td> 5.1: Area </td>
-						<td> <a href="./hw/hw4.pdf">HW 4</a> </td>
+						<td> <a href="./hw/hw4.pdf">HW 4</a>, <a href="./pcq/pcq5.1.pdf"> PCQ: 5.1 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
