--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -117,7 +117,7 @@
 					<tr>
 						<td> 3 </td>
 						<td> 16 Sept. </td>
-						<td> 2.1: Tangent Lines, Velocity </td>
+						<td> 1.5: Limits Involving Infinity </td>
 						<td> <a href="./hw/hw4.pdf">HW 4</a>  </td>
 						<td> </td>
 					</tr>
@@ -131,7 +131,7 @@
 					<tr>
 						<td>  </td>
 						<td> 19 Sept. </td>
-						<td>  2.2: The Derivative </td>
+						<td>  2.1: Tangent Lines, Velocity </td>
 						<td> <a href="./hw/hw5.pdf">HW 5</a>  </td>
 						<td>  </td>
 					</tr>
@@ -145,7 +145,7 @@
 					<tr>
 						<td> 4 </td>
 						<td> 23 Sept. </td>
-						<td> 2.3: Computation of Derivatives, Power Rule </td>
+						<td> 2.2: The Derivative </td>
 						<td> <a href="./hw/hw6.pdf">HW 6</a>  </td>
 						<td>  </td>
 					</tr>
@@ -153,48 +153,48 @@
 						<td>  </td>
 						<td> 24 Sept. </td>
 						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td> </td>
+						<td> <a href="./hw/hw7.pdf">HW 7</a>, <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
 						<td> Quiz 2 </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 26 Sept. </td>
-						<td> 2.4: The Product and Quotient Rules </td>
-						<td> <a href="./hw/hw7.pdf">HW 7</a>, <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
+						<td> 2.3: Computation of Derivatives, Power Rule </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 27 Sept. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td>  </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
 						<td> 30 Sept. </td>
-						<td> 2.5: The Chain Rule </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
+						<td> 2.4: The Product and Quotient Rules </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 1 Oct. </td>
 						<td> 2.5: The Chain Rule </td>
-						<td>  </td>
+						<td> <a href="./hw/hw9.pdf">HW 9</a>, <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
 						<td> Quiz 3 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 3 Oct. </td>
-						<td> 2.6: Derivatives of Trig Functions </td>
-						<td> <a href="./hw/hw9.pdf">HW 9</a>, <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
+						<td> 2.5: The Chain Rule </td>
+						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  <Oct>
 						<td> 4 Oct. </td>
-						<td> 2.6: Derivatives of Trig Functions </td>
+						<td> 2.5 The Chain Rule </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -229,126 +229,126 @@
 					<tr>
 						<td> 7 </td>
 						<td> 14 Oct. </td>
-						<td> 2.7: Der. of Expo and Log Functions </td>
+						<td> 2.6: Derivatives of Trig Functions </td>
 						<td>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 15 Oct. </td>
-						<td> 2.7: Der. of Expo and Log Functions </td>
+						<td> 2.6: Derivatives of Trig Functions </td>
 						<td> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 17 Oct. </td>
-						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
+						<td> 2.7: Der. of Expo and Log Functions </td>
 						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 18 Oct. </td>
-						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
+						<td> 2.7: Der. of Expo and Log Functions </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 8 </td>
 						<td> 21 Oct. </td>
-						<td> 2.10: Mean Value Theorem  </td>
+						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
 						<td> <a href="./hw/hw12.pdf">HW 12</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 22 Oct. </td>
-						<td> 2.10: Mean Value Theorem </td>
+						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
 						<td>  </td>
 						<td> Quiz 4 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 24 Oct. </td>
-						<td> 3.1: Linear Approximation, Newton’s Method </td>
+						<td> 2.10: Mean Value Theorem  </td>
 						<td> <a href="./hw/hw13.pdf">HW 13</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 25 Oct. </td>
-						<td> 3.1: Linear Approximation, Newton’s Method </td>
+						<td> 32.10: Mean Value Theorem </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 28 Oct. </td>
-						<td> 3.2: L’Hopital’s Rule </td>
+						<td> 3.1: Linear Approximation, Newton’s Method </td>
 						<td> <a href="./hw/hw14.pdf">HW 14</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 29 Oct. </td>
-						<td> 3.2: L’Hopital’s Rule </td>
+						<td> 3.1: Linear Approximation, Newton’s Method </td>
 						<td> </td>
 						<td> Quiz 5 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 31 Oct. </td>
-						<td> 3.3: Maximum & Minimum </td>
+						<td> 3.2: L’Hopital’s Rule  </td>
 						<td> <a href="./hw/hw12.pdf">HW 15</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 1 Nov. </td>
-						<td> 3.4: Increasing & Decreasing </td>
+						<td> 3.2: L’Hopital’s Rule </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 10 </td>
 						<td> 4 Nov. </td>
-						<td> 3.5: Concavity </td>
+						<td> 3.3: Maximum & Minimum </td>
 						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 5 Nov. </td>
-						<td> 3.6: Curve Sketching </td>
+						<td> 3.4: Increasing & Decreasing </td>
 						<td>  </td>
 						<td> Quiz 6 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 7 Nov. </td>
-						<td> 3.7: Optimization </td>
+						<td> 3.5: Concavity </td>
 						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 8 Nov. </td>
-						<td> 3.7: Optimization </td>
+						<td> 3.6: Curve Sketching </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 11 </td>
 						<td> 11 Nov. </td>
-						<td> 3.8: Related Rates </td>
+						<td> 3.7: Optimization </td>
 						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 12 Nov. </td>
-						<td> 3.8: Related Rates </td>
+						<td> 3.7: Optimization </td>
 						<td> </td>
 						<td> Quiz 7 </td>
 					</tr>
@@ -362,7 +362,7 @@
 					<tr>
 						<td>  </td>
 						<td> 15 Nov. </td>
-						<td> Review </td>
+						<td> 3.8: Related Rates </td>
 						<td>  </td>
 						<td>  </td>
 					</tr>
