--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -230,7 +230,7 @@
 						<td> 7 </td>
 						<td> 14 Oct. </td>
 						<td> 2.6: Derivatives of Trig Functions </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq2.6.pdf"> PCQ: 2.6 </a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -244,7 +244,7 @@
 						<td>  </td>
 						<td> 17 Oct. </td>
 						<td> 2.7: Der. of Expo and Log Functions </td>
-						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
+						<td> <a href="./hw/hw11.pdf">HW 11</a>, <a href="./pcq/pcq2.7.pdf"> PCQ: 2.7 </a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -258,7 +258,7 @@
 						<td> 8 </td>
 						<td> 21 Oct. </td>
 						<td> 2.8: Implicit Differentiation, Inverse Trig </td>
-						<td> <a href="./hw/hw12.pdf">HW 12</a> </td>
+						<td> <a href="./hw/hw12.pdf">HW 12</a>, <a href="./pcq/pcq2.8.pdf"> PCQ: 2.8 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -272,7 +272,7 @@
 						<td> </td>
 						<td> 24 Oct. </td>
 						<td> 2.10: Mean Value Theorem  </td>
-						<td> <a href="./hw/hw13.pdf">HW 13</a> </td>
+						<td> <a href="./hw/hw13.pdf">HW 13</a>, <a href="./pcq/pcq2.10.pdf"> PCQ: 2.10 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -286,7 +286,7 @@
 						<td> 9 </td>
 						<td> 28 Oct. </td>
 						<td> 3.1: Linear Approximation, Newton’s Method </td>
-						<td> <a href="./hw/hw14.pdf">HW 14</a> </td>
+						<td> <a href="./hw/hw14.pdf">HW 14</a>, <a href="./pcq/pcq3.1.pdf"> PCQ: 3.1 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -300,7 +300,7 @@
 						<td> </td>
 						<td> 31 Oct. </td>
 						<td> 3.2: L’Hopital’s Rule  </td>
-						<td> <a href="./hw/hw12.pdf">HW 15</a> </td>
+						<td> <a href="./hw/hw12.pdf">HW 15</a>, <a href="./pcq/pcq3.2.pdf"> PCQ: 3.2 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -314,7 +314,7 @@
 						<td> 10 </td>
 						<td> 4 Nov. </td>
 						<td> 3.3: Maximum & Minimum </td>
-						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
+						<td> <a href="./hw/hw16.pdf">HW 16</a>, <a href="./pcq/pcq3.3,3.4.pdf"> PCQ: 3.3 and 3.4 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -328,7 +328,7 @@
 						<td> </td>
 						<td> 7 Nov. </td>
 						<td> 3.5: Concavity </td>
-						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
+						<td> <a href="./hw/hw17.pdf">HW 17</a>, <a href="./pcq/pcq3.5,3.6.pdf"> PCQ: 3.5 and 3.6 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -342,7 +342,7 @@
 						<td> 11 </td>
 						<td> 11 Nov. </td>
 						<td> 3.7: Optimization </td>
-						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
+						<td> <a href="./hw/hw18.pdf">HW 18</a>, <a href="./pcq/pcq3.7.pdf"> PCQ: 3.7 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -356,7 +356,7 @@
 						<td> </td>
 						<td> 14 Nov. </td>
 						<td> 3.8: Related Rates </td>
-						<td> <a href="./hw/hw19.pdf">HW 19</a> </td>
+						<td> <a href="./hw/hw19.pdf">HW 19</a>, <a href="./pcq/pcq3.8.pdf"> PCQ: 3.8 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -377,14 +377,14 @@
 						<td>  </td>
 						<td> 19 Nov. </td>
 						<td> 4.1:Antiderivatives </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq4.1.pdf"> PCQ: 4.1 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 21 Nov. </td>
 						<td> 4.2:Sigma Notation </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq4.2,4.3.pdf"> PCQ: 4.2 and 4.3 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -405,7 +405,7 @@
 						<td>  </td>
 						<td> 26 Nov. </td>
 						<td> 4.4 The Definite Integral </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq4.4.pdf"> PCQ: 4.4 </a>  </td>
 						<td> Quiz 9 </td>
 					</tr>
 					<tr>
@@ -433,7 +433,7 @@
 						<td>  </td>
 						<td> 3 Dec. </td>
 						<td> 4.5: The Fundamental Theorem of Calculus </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq4.5.pdf"> PCQ: 4.5 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -447,7 +447,7 @@
 						<td>  </td>
 						<td> 6 Dec. </td>
 						<td> 4.6: The Substitution Method </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq4.6.pdf"> PCQ: 4.6 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
