--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -132,7 +132,7 @@
 						<td>  </td>
 						<td> 19 Sept. </td>
 						<td> 5.2: Volume </td>
-						<td> <a href="./hw/hw5.pdf">HW 5</a> </td>
+						<td> <a href="./hw/hw5.pdf">HW 5</a>, <a href="./pcq/pcq5.1.pdf"> PCQ: 5.1 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
