--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -132,7 +132,7 @@
 						<td>  </td>
 						<td> 19 Sept. </td>
 						<td> 5.2: Volume </td>
-						<td> <a href="./hw/hw5.pdf">HW 5</a>, <a href="./pcq/pcq5.1.pdf"> PCQ: 5.1 </a>  </td>
+						<td> <a href="./hw/hw5.pdf">HW 5</a>, <a href="./pcq/pcq5.2.pdf"> PCQ: 5.2 </a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -236,7 +236,7 @@
 					<tr>
 						<td>  </td>
 						<td> 15 Oct. </td>
-						<td> 6.1: Review of Basic Integration Techniques </td>
+						<td> 7.1: Differential Equations  </td>
 						<td> </td>
 						<td> Quiz 4 </td>
 					</tr>
