--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -146,14 +146,14 @@
 						<td> 4 </td>
 						<td> 23 Sept. </td>
 						<td> 5.3: More Volume </td>
-						<td> <a href="./hw/hw6.pdf">HW 6</a> </td>
+						<td> <a href="./hw/hw6.pdf">HW 6</a>, <a href="./pcq/pcq5.3.pdf"> PCQ: 5.3 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 24 Sept. </td>
 						<td> 5.4: Arc Length and Surface Area  </td>
-						<td> </td>
+						<td> <a href="./pcq/pcq5.4.pdf"> PCQ: 5.4 </a></td>
 						<td> Quiz 2 </td>
 					</tr>
 					<tr>
@@ -188,13 +188,13 @@
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 5.5: Projectile Motion </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq5.5.pdf"> PCQ: 5.5 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  <Oct>
 						<td> 4 Oct. </td>
-						<td> 5.6: Application in Physics </td>
+						<td> 5.6: Application in Physics, <a href="./pcq/pcq5.6.pdf"> PCQ: 5.6 </a> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -209,7 +209,7 @@
 						<td> </td>
 						<td> 8 Oct. </td>
 						<td> 5.7: Application in Probability </td>
-						<td> </td>
+						<td> <a href="./pcq/pcq5.7.pdf"> PCQ: 5.7 </a> </td>
 						<td> Quiz 3 </td>
 					</tr>
 					<tr>
