--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -181,14 +181,14 @@
 						<td>  </td>
 						<td> 1 Oct. </td>
 						<td> 5.5: Projectile Motion </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq5.5.pdf"> PCQ: 5.5 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 3 Oct. </td>
 						<td> 5.5: Projectile Motion </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq5.5.pdf"> PCQ: 5.5 </a> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
