--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -152,35 +152,35 @@
 					<tr>
 						<td>  </td>
 						<td> 24 Sept. </td>
-						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td> <a href="./hw/hw7.pdf">HW 7</a>, <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
+						<td>2.2: The Derivative  </td>
+						<td> <a href="./hw/hw7.pdf">HW 7</a>  </td>
 						<td> Quiz 2 </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 26 Sept. </td>
 						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 27 Sept. </td>
-						<td> 2.4: The Product and Quotient Rules </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
+						<td> 2.3: Computation of Derivatives, Power Rule </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a>  </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
 						<td> 30 Sept. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 1 Oct. </td>
-						<td> 2.5: The Chain Rule </td>
+						<td> 2.4: The Product and Quotient Rules </td>
 						<td> <a href="./hw/hw9.pdf">HW 9</a>, <a href="./pcq/pcq2.5.pdf"> PCQ: 2.5 </a> </td>
 						<td> Quiz 3 </td>
 					</tr>
