--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -194,8 +194,8 @@
 					<tr>
 						<td>  <Oct>
 						<td> 4 Oct. </td>
-						<td> 5.6: Application in Physics, <a href="./pcq/pcq5.6.pdf"> PCQ: 5.6 </a> </td>
-						<td> </td>
+						<td> 5.6: Application in Physics </a> </td>
+						<td> <a href="./pcq/pcq5.6.pdf"> PCQ: 5.6 </td>
 						<td> </td>
 					</tr>
 					<tr>
