--- a/classes/MATH132/index.html
+++ b/classes/MATH132/index.html
@@ -230,7 +230,7 @@
 						<td> 7 </td>
 						<td> 14 Oct. </td>
 						<td> 7.1: Differential Equations </td>
-						<td> <a href="./hw/hw10.pdf">HW 10</a> </td>
+						<td> <a href="./hw/hw10.pdf">HW 10</a>,<a href="./pcq/pcq7.1.pdf"> PCQ: 7.1 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -244,14 +244,14 @@
 						<td>  </td>
 						<td> 17 Oct. </td>
 						<td> 6.1: Review of Basic Integration Techniques </td>
-						<td> <a href="./hw/hw11.pdf">HW 11</a> </td>
+						<td> <a href="./hw/hw11.pdf">HW 11</a>, <a href="./pcq/pcq6.1.pdf"> PCQ: 6.1 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 18 Oct. </td>
 						<td> 6.2: Integration by Parts </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq6.2.pdf"> PCQ: 6.2 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -265,7 +265,7 @@
 						<td>  </td>
 						<td> 22 Oct. </td>
 						<td> 6.3: Trig Integrals </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq6.3.pdf"> PCQ: 6.3 </a> </td>
 						<td> Quiz 5 </td>
 					</tr>
 					<tr>
@@ -279,7 +279,7 @@
 						<td>  </td>
 						<td> 25 Oct. </td>
 						<td> 6.4: Partial Fractions </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq6.4.pdf"> PCQ: 6.4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -293,14 +293,14 @@
 						<td>  </td>
 						<td> 29 Oct. </td>
 						<td> 6.5: Computer Algebra Systems </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq6.5.pdf"> PCQ: 6.5 </a> </td>
 						<td> Quiz 6 </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 31 Oct. </td>
 						<td> 4.7: Numerical Integration </td>
-						<td> <a href="./hw/hw15.pdf">HW 15</a> </td>
+						<td> <a href="./hw/hw15.pdf">HW 15</a>, <a href="./pcq/pcq4.7.pdf"> PCQ: 4.7 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -321,7 +321,7 @@
 						<td>  </td>
 						<td> 5 Nov. </td>
 						<td> 6.6: Improper Integrals </td>
-						<td>  </td>
+						<td> <a href="./pcq/pcq6.6.pdf"> PCQ: 6.6 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -342,7 +342,7 @@
 						<td> 11 </td>
 						<td> 11 Nov. </td>
 						<td> 8.1: Sequences </td>
-						<td> <a href="./hw/hw16.pdf">HW 16</a> </td>
+						<td> <a href="./hw/hw16.pdf">HW 16</a>, <a href="./pcq/pcq8.1,8.2.pdf"> PCQ: 8.1,8.2 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -356,7 +356,7 @@
 						<td> </td>
 						<td> 14 Nov. </td>
 						<td> 8.3: The Integral and Comparison Tests </td>
-						<td> <a href="./hw/hw17.pdf">HW 17</a> </td>
+						<td> <a href="./hw/hw17.pdf">HW 17</a>, <a href="./pcq/pcq8.3.pdf"> PCQ: 8.3 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -370,7 +370,7 @@
 						<td> 12 </td>
 						<td> 18 Nov. </td>
 						<td> 8.4: Alternating Series </td>
-						<td> <a href="./hw/hw18.pdf">HW 18</a> </td>
+						<td> <a href="./hw/hw18.pdf">HW 18</a>, <a href="./pcq/pcq8.4.pdf"> PCQ: 8.4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
@@ -384,7 +384,7 @@
 						<td> </td>
 						<td> 21 Nov. </td>
 						<td> 8.5: Absolute Convergence and Ratio Test </td>
-						<td> <a href="./hw/hw19.pdf">HW 19</a> </td>
+						<td> <a href="./hw/hw19.pdf">HW 19</a>, <a href="./pcq/pcq8.5.pdf"> PCQ: 8.5 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
