--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -153,14 +153,14 @@
 						<td>  </td>
 						<td> 24 Sept. </td>
 						<td>2.2: The Derivative  </td>
-						<td> <a href="./hw/hw7.pdf">HW 7</a>  </td>
+						<td>   </td>
 						<td> Quiz 2 </td>
 					</tr>
 					<tr>
 						<td>  </td>
 						<td> 26 Sept. </td>
 						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td> <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
+						<td> <a href="./hw/hw7.pdf">HW 7</a>, <a href="./pcq/pcq2.3.pdf"> PCQ: 2.3 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
