--- a/classes/MATH131/index.html
+++ b/classes/MATH131/index.html
@@ -167,14 +167,14 @@
 						<td>  </td>
 						<td> 27 Sept. </td>
 						<td> 2.3: Computation of Derivatives, Power Rule </td>
-						<td> <a href="./hw/hw8.pdf">HW 8</a>  </td>
+						<td>   </td>
 						<td>  </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
 						<td> 30 Sept. </td>
 						<td> 2.4: The Product and Quotient Rules </td>
-						<td> <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
+						<td> <a href="./hw/hw8.pdf">HW 8</a>, <a href="./pcq/pcq2.4.pdf"> PCQ: 2.4 </a> </td>
 						<td>  </td>
 					</tr>
 					<tr>
